# yapp

./: CMakeLists.txt  Doxyfile  README.md
include/: yapp.hpp
include/yapp/: address.hpp  arch_container.hpp  buffer.hpp  exception.hpp  headers.hpp  memory.hpp  pe.hpp  platform.hpp  raw.hpp  slice.hpp  traits.hpp
include/yapp/headers/: data_directory.hpp  directories.hpp  dos.hpp  file.hpp  nt.hpp  optional.hpp  raw.hpp  section.hpp
include/yapp/headers/directories/: export.hpp
src/: address.cpp  address.tpp  dllmain.cpp  exception.cpp  memory.cpp
src/headers/: data_directory.cpp  data_directory.tpp  section.cpp
test/: framework.hpp  main.cpp
